# manager_agent_gym

./: .env.example  .gitignore  EVALUATION_AUDIT.md  LIBRARY_DOCUMENTATION.md  LICENSE  MIGRATION_PLAN_MULTI_AGENT_ML.md  QUICK_START_GUIDE.md  README.md  STAGED_EVALUATION_COMPLETE.md  STAGED_EVALUATION_DELETION_GUIDE.md  TECHNICAL_ARCHITECTURE.md  VALIDATION_CONTEXT_REFACTOR_ANALYSIS.md  churn_predictions.xlsx  mkdocs.yml  pyproject.toml  test_all_rubric_codes.py  test_phase2_tools.py  test_resource_modes.py  test_worker_excel.py
.github/workflows/: deploy-docs.yml
curation/: __init__.py
curation/gdpeval/: QUICKSTART.md  README.md  __init__.py
docs/: LIBRARY_DOCUMENTATION.md  QUICK_START_GUIDE.md  README.md  RL_CODE_LOCATIONS.md  RL_TRAINING_PLAN.md  RL_TRAINING_QUICKSTART.md  TECHNICAL_ARCHITECTURE.md  gen_benchmarks.py  gen_index_from_readme.py  index.md  preference_research.tex
docs/_tmp_graphviz/: airline_launch_program  banking_license_application  brand_crisis_management  data_science_analytics  genai_feature_launch  global_product_recall  icap  legal_m_and_a  marketing_campaign  orsa  tech_acquisition_integration  tech_company_acquisition  uk_university_accreditation
docs/api/: core.md  evaluation.md  execution.md  schemas.md  schemas_core.md  schemas_execution.md  schemas_preferences.md
docs/benchmark/: __pycache__.md  airline_launch_program.md  banking_license_application.md  brand_crisis_management.md  data_science_analytics.md  enterprise_saas_negotiation_pipeline.md  genai_feature_launch.md  global_product_recall.md  icap.md  index.md  ipo_readiness_program.md  legal_contract_negotiation.md  legal_global_data_breach.md  legal_litigation_ediscovery.md  legal_m_and_a.md  marketing_campaign.md  mnc_workforce_restructuring.md  orsa.md  pharmaceutical_product_launch.md  supply_chain_planning.md  tech_acquisition_integration.md  tech_company_acquisition.md  uk_university_accreditation.md
docs/dev/: building-docs.md
examples/: __init__.py  cli.py  common_stakeholders.py  run_examples.py  scenarios.py
examples/end_to_end_examples/: __init__.py  standard_rules.py
examples/gdpeval/: README.md  __init__.py  run_gdpeval_task.py
examples/getting_started/: README.md  basic_agent_communication.py  hello_manager_agent.py
examples/research/: __init__.py  batch_evaluate_calibration.py  multi_agent_ml_task.py
manager_agent_gym/: __init__.py  clients.py  config.py
manager_agent_gym/core/: __init__.py  clients.py
manager_agent_gym/schemas/: __init__.py  config.py  unified_results.py
tests/: README.md  conftest.py  test_agent_registry.py  test_communication_graph.py  test_communication_integration.py  test_communication_service.py  test_engine_coordination_prefdyn.py  test_engine_errors.py  test_engine_outputs.py  test_llm_generator.py  test_llm_interface.py  test_manager_actions.py  test_manager_factory.py  test_manager_info_actions.py  test_manager_llm_fallbacks.py  test_manager_observation.py  test_preference_engine_integration.py  test_preferences.py  test_random_manager_agent.py  test_staged_evaluation_end_to_end.py  test_structured_manager_context.py  test_thread_based_rubric_generation.py  test_validation_engine.py  test_validation_frequency.py  test_workflow_core.py  test_workflow_evaluator.py
tests/helpers/: stubs.py
tests/integration/: test_communication_integration.py  test_composite_effective_status.py  test_engine_cost_time.py  test_engine_e2e.py  test_engine_scheduler_ready_flow.py  test_engine_timing.py  test_ready_status_and_completion_propagation.py
tests/tools/: GDPEVAL_TEST_PLAN.md  conftest.py
(+328 files in other folders)
