[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manager_agent_gym"
version = "0.1.0"
description = "A framework for simulating and evaluating manager agents in workflow environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.13.12",
    "exa>=0.5.26",
    "exa-py>=1.8.8",
    "fastapi[standard]>=0.115.7",
    "inngest>=0.4.18",
    "litellm>=1.60.8",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "openai>=1.58.0",
    "openai-agents>=0.2.4",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "pytest-asyncio>=1.1.0",
    "rich>=13.9.4",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.34.0",
    "tqdm>=4.66.5",
    "typer>=0.12.5",
    "questionary>=2.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["manager_agent_gym*"]

[tool.pyright]
exclude = [
    "**/*.md",
    ".venv",
    "venv",
    ".plotenv",
    "**/site-packages/**"
]
# Tests rely on pytest which may not ship type stubs
reportMissingImports = false
reportMissingTypeStubs = false
