[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manager_agent_gym"
version = "0.1.0"
description = "A framework for simulating and evaluating manager agents in workflow environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi[standard]>=0.115.7",
    "inngest>=0.4.18",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.34.0",
    "tqdm>=4.66.5",
    "typer>=0.12.5",
    "questionary>=2.0.1",
    # Data processing & analysis
    "numpy>=1.26.4", # Pinned for compatibility
    "pandas>=2.0.0",
    "matplotlib>=3.10.0",
    # LLM & agents
    "agents>=1.4.0",
    "litellm>=1.60.8",
    "openai>=1.58.0",
    "openai-agents>=0.2.4",
    "anthropic>=0.68.0",
    "cohere>=5.13.12",
    "instructor>=1.11.3",
    # External tools
    "exa>=0.5.26",
    "exa-py>=1.8.8",
    "e2b-code-interpreter>=0.0.9",
    # Document processing (multimodal evaluation)
    "openpyxl>=3.1.0", # Excel files
    "python-docx>=1.1.0", # Word documents
    "PyMuPDF>=1.23.0", # PDF processing (fitz)
    "pdfplumber>=0.11.0", # PDF text extraction
    "PyPDF2>=3.0.0", # Additional PDF support
    "reportlab>=4.0.0", # PDF creation
    "Pillow>=10.0.0", # Image processing
    "pytesseract>=0.3.10", # OCR support
    # Data curation & evaluation
    "datasets>=4.2.0", # HuggingFace datasets
    "streamlit>=1.31.0", # Curation UI
    "rank-bm25>=0.2.2", # Text ranking
    # Development tools
    "ruff>=0.9.5",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "mkdocs-material>=9.5.38",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "graphviz>=0.20.3",
    "pydot>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["manager_agent_gym*"]

[tool.pyright]
exclude = [
    "**/*.md",
    ".venv",
    "venv",
    ".plotenv",
    "**/site-packages/**"
]
# Tests rely on pytest which may not ship type stubs

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
